ecmascript/parser/tests/test262-error-references/fail/4a866d4657f5a83a.js.stderr
error: Unexpected token Some(Colon)
 --> $DIR/tests/test262-parser/fail/4a866d4657f5a83a.js:1:12
  |
1 | (class {[3]:0})
  |            ^

